k8/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gorph
  labels:
    name: gorph
    app: gorph
