k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gorph-service
  namespace: gorph
  labels:
    app: gorph
    component: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: gorph
    component: frontend
